--- a/app/package.json
+++ b/app/package.json
@@ -26,6 +26,7 @@
     "hapi": "^16.0.1",
     "inert": "^4.0.3",
     "moment": "^2.17.1",
+    "run-series": "^1.1.4",
     "sqlite3": "^3.1.8"
   }
 }
