--- a/app/package.json
+++ b/app/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://gitlab.com/jvanhorenbeke/radius-cycling#README",
   "dependencies": {
+    "@slack/client": "^3.8.1",
     "axios": "^0.15.3",
     "hapi": "^16.0.1",
     "inert": "^4.0.3",
