--- a/app/package.json
+++ b/app/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "Radius Cycling Leaderboard",
   "main": "app/server.js",
+  "engines": {
+    "node": "7.10.x"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
