--- a/app/package.json
+++ b/app/package.json
@@ -4,7 +4,8 @@
   "description": "Radius Cycling Leaderboard",
   "main": "app/server.js",
   "engines": {
-    "node": "7.10.x"
+    "node": "7.10.x", 
+    "npm": "4.2.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
